--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
 	"name": "Tabs2List",
-	"version": "1.1.0",
-	"description": "Convert URLs of open tabs to html unordered list of links.",
+	"version": "1.2.0",
+	"description": "Convert URLs and tab titles of tabs to a list of links.",
 
 	"background": {
 		"scripts": ["background.js"]
